# praude

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: args.rs  hooks.rs  main.rs  pty.rs  runner.rs  transcript.rs  trust.rs  util.rs
