[package]
name = "praude"
version = "1.0.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "praude"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
portable-pty = "0.8"
serde_json = "1.0"
tempfile = "3.10"
uuid = { version = "1.8", features = ["v4"] }
